--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content = "name= value,initial-scale=1 ">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="./../src/lib/js/zepto.js"></script>
-    <script src="./../src/lib/js/zepto.touch.js"></script>
     <title>react</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+    </div>
 </body>
+<script src="https://cdn.bootcss.com/vConsole/3.0.0/vconsole.min.js"></script>
+<script>
+/* eslint-disable*/
+var vconsole = new VConsole()
+</script>
 </html>
